modify style for obstacle

--- a/styles/style.css
+++ b/styles/style.css
@@ -104,13 +104,12 @@ body {
 .obstacle {
   position: absolute;
   width: 180px; /* Adjust as needed */
-  height: 170px; /* Adjust as needed */
-  background-image: url("/images/tom-and-jerry-50.png"); /* Replace with your obstacle image */
+  height: 170px; /* Adjust as needed */ /* Replace with your obstacle image */
   background-size: cover; /* Ensure the image covers the element */
-  animation: obstacleMove 8s linear infinite;
+  /* animation: obstacleMoveLeft 8s linear infinite; */
 }
 
-@keyframes obstacleMove {
+@keyframes obstacleMoveRight {
   0%,
   92% {
     left: calc(
@@ -120,6 +119,24 @@ body {
   50% {
     left: 0; /* Middle position (left side of the screen) */
   }
+}
+
+@keyframes obstacleMoveLeft {
+  0%,
+  92% {
+    left: calc(8%); /* Starting and ending position (left side of the screen) */
+  }
+  50% {
+    left: calc(92% - 50px); /* Middle position (right side of the screen) */
+  }
+}
+
+.runningObstacleRight {
+  animation: obstacleMoveLeft 8s linear infinite;
+}
+
+.runningObstacleLeft {
+  animation: obstacleMoveRight 8s linear infinite;
 }
 
 @keyframes run-animation {
